// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextCell component TextCell handles changes 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <input
              class="field gds-input-text-field gds-typography"
              data-testid="DATA-TEST-ID"
              id="data"
              name="data"
              type="text"
              value="text"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextCell component TextCell handles changes 2`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <input
              class="field gds-input-text-field gds-typography"
              data-testid="DATA-TEST-ID"
              id="data"
              name="data"
              type="text"
              value="text"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextCell component TextCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field input-text-field-read-only gds-typography"
            >
              <span
                class="gds-typography"
              >
                text 1
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextCell component TextCell renders cell editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <input
              class="field gds-input-text-field gds-typography"
              id="data"
              name="data"
              type="text"
              value=""
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextCell component TextCell renders hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field input-text-field-read-only gds-typography"
            >
              <span
                class="gds-typography"
              >
                text 1
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextCell component TextCell renders row editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <input
              class="field gds-input-text-field gds-typography"
              id="data"
              name="data"
              type="text"
              value=""
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextCell component TextCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field input-text-field-read-only gds-typography"
            >
              <span
                class="gds-typography"
              >
                text 2
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
